--- a/ParOuImpar/src/main/resources/parouimpar/primary.fxml
+++ b/ParOuImpar/src/main/resources/parouimpar/primary.fxml
@@ -3,12 +3,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.geometry.Insets?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="parouimpar.PrimaryController">
    <children>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
+      <Label text="Valor"/>
+      <TextField fx:id="valor" padding="5px" />
+      <Button text="Verificar" fx:id="clique" onAction="#clikou" />
+      <Label fx:id="resultado" text="Resultado"/>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
