--- a/SystemCP-g/src/main/java/systemcp/g/ProgramManager.fxml
+++ b/SystemCP-g/src/main/java/systemcp/g/ProgramManager.fxml
@@ -6,6 +6,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="systemcp.g.ProgramManagerController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="systemcp.g.ProgramManagerController">
+   <children>
+      <Button layoutX="488.0" layoutY="350.0" mnemonicParsing="false" text="Console" />
+      <Button layoutX="423.0" layoutY="350.0" mnemonicParsing="false" text="Aplicar" />
+      <Label layoutX="181.0" layoutY="37.0" text="Console Program-GUI (Gerenciador de Apps)" />
+      <RadioButton layoutX="14.0" layoutY="100.0" mnemonicParsing="false" text="Calculadora Interativa" />
+      <RadioButton layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Gerenciador de Arquivos" />
+   </children>
 </AnchorPane>
