--- a/SystemCP-g/src/main/java/systemcp/g/ProgramManager.fxml
+++ b/SystemCP-g/src/main/java/systemcp/g/ProgramManager.fxml
@@ -9,10 +9,10 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="systemcp.g.ProgramManagerController">
    <children>
-      <Button layoutX="488.0" layoutY="350.0" mnemonicParsing="false" text="Console" />
-      <Button layoutX="423.0" layoutY="350.0" mnemonicParsing="false" text="Aplicar" />
+      <Button fx:id="Close" layoutX="488.0" layoutY="350.0" mnemonicParsing="false" text="Console" />
+      <Button fx:id="Aplic" layoutX="423.0" layoutY="350.0" mnemonicParsing="false" text="Aplicar" />
       <Label layoutX="181.0" layoutY="37.0" text="Console Program-GUI (Gerenciador de Apps)" />
-      <RadioButton layoutX="14.0" layoutY="100.0" mnemonicParsing="false" text="Calculadora Interativa" />
-      <RadioButton layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Gerenciador de Arquivos" />
+      <RadioButton fx:id="Calc" layoutX="14.0" layoutY="100.0" mnemonicParsing="false" text="Calculadora Interativa" />
+      <RadioButton fx:id="File" layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Gerenciador de Arquivos" />
    </children>
 </AnchorPane>
