--- a/SystemCP-g/src/main/java/systemcp/g/Intalador.fxml
+++ b/SystemCP-g/src/main/java/systemcp/g/Intalador.fxml
@@ -7,5 +7,6 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="systemcp.g.IntaladorController">
-    <Label AnchorPane.bottomAnchor="30" />
+    <Label AnchorPane.bottomAnchor="30" text="Instalador de Programas"/>
+    <RadioButton text="Files" AnchorPane.bottomAnchor="20" fx:id="App1" />
 </AnchorPane>
