--- a/SystemCP-g/src/main/java/systemcp/g/Intalador.fxml
+++ b/SystemCP-g/src/main/java/systemcp/g/Intalador.fxml
@@ -8,5 +8,5 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="systemcp.g.IntaladorController">
     <Label AnchorPane.bottomAnchor="30" text="Instalador de Programas"/>
-    <RadioButton text="Files" AnchorPane.bottomAnchor="20" fx:id="App1" />
+    <RadioButton text="Files" AnchorPane.bottomAnchor="20" fx:id="app1" />
 </AnchorPane>
