--- a/SystemCP-g/src/main/java/systemcp/g/Intalador.fxml
+++ b/SystemCP-g/src/main/java/systemcp/g/Intalador.fxml
@@ -9,4 +9,6 @@
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="systemcp.g.IntaladorController">
     <Label AnchorPane.bottomAnchor="30" text="Instalador de Programas"/>
     <RadioButton text="Files" AnchorPane.bottomAnchor="20" fx:id="app1" />
+    <RadioButton text="Escritor" AnchorPane.bottomAnchor="18" fx:id="app2"/>
+    <Button text="Instalar" onAction="#instalar" />
 </AnchorPane>
